test/spec_vectors/i32/fail/module_3.wat
(module (func $type-unary-operand-empty-in-loop (i32.const 0) (loop (i32.eqz) (drop))))